[metadata]
name = ucheck
version = attr: ucheck.__version__
author = Ira Horecka
author_email = ira89@icloud.com
summary = Automate UCheck COVID-19 self-assessments form submission
description-file = README.md
home-page = https://github.com/irahorecka/ucheck
requires-dist = setuptools
license = MIT
license_file = LICENSE
platform = any
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Utilities
project_urls =
    Bug Tracker = https://github.com/irahorecka/ucheck/issues

[files]
packages =
    setup
    setup.cfg
    setup.cfg.extern
extra_files =
    LICENSE

[options]
zip_safe = false
python_requires = >=3.6
packages = find:
setup_requires =
    setuptools>=38.3.0
install_requires =
    selenium>=4.0.0
    PyYAML>=6.0

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar
